Added new td for icon (first item in row) & added table-hover style so user can more easily tell which row the cursor is on.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -23,9 +23,10 @@
    
     <div id="files">
     </div>
-    <table id="fileSystem" class="table  table-striped">
+    <table id="fileSystem" class="table  table-striped table-hover">
         <thead class="table-success">
             <tr>
+                <th></th>
                 <th>Name</th>
                 <th>Type</th>
                 <th>FullName</th>
