Altered message sending so it uses a more proper WindowMessage object which is de/serialized better.  There are still some tricks to it though. Added WindowMessage class that makes C# deserialization much easier.  This is a good initial working version.

--- a/FileViewer/wwwroot/index.html
+++ b/FileViewer/wwwroot/index.html
@@ -38,7 +38,9 @@
 
     <script>
         function callDotNet() {
-            window.external.sendMessage('Hi .NET! 🤖');
+            // Command & Data have to begin with uppercase letter 
+            // to get serialized properly on the receiving side.
+            window.external.sendMessage(`{"Command":"testMsg","Data":"Hi .NET! 🤖"}`);
         }
     </script>
 </body>
